force-app/main/default/objects/Dynamic_Template_Variable__c/Dynamic_Template_Variable__c.object-meta.xml
<CustomObject>
    <label>Template Variable</label>
    <nameField>
        <displayFormat>TV-{000000}</displayFormat>
        <label>Template Variable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>