force-app/main/default/objects/Dynamic_Template_Variable__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <description>The field path (e.g., Owner.Name, Opportunities.Amount) that this variable represents.</description>
    <label>Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>