force-app/main/default/objects/Dynamic_Template_Variable__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <description>JSON snapshot of the subquery plan (filters, orderBy, limit) for collection variables.</description>
    <label>Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>