force-app/main/default/objects/Dynamic_Template_Variable__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>The template that this variable belongs to.</description>
    <label>Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Template Variables</relationshipLabel>
    <relationshipName>Template_Variables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>