force-app/main/default/objects/Dynamic_Template_Variable__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of variable: Scalar for simple fields, Collection for related lists.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scalar</fullName>
                <default>true</default>
                <label>Scalar</label>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>